--- a/static/lab1.css
+++ b/static/lab1.css
@@ -9,3 +9,21 @@ img {
     width: 500px;
     height: 500px;
 }
+footer {
+    background-color: beige;
+    color: tan;
+    font-family: Arial;
+    margin: 0px;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+header {
+    background-color: beige;
+    color: tan;
+    font-family: Arial;
+    margin: 0px;
+}
