--- a/templates/example.html
+++ b/templates/example.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Алина Мицевич. Лабораторная работа {{lab_number}}</title>
+    <title>
+        {% if name %}
+            {{ name }}. Лабораторная работа {{ lab_number }}
+        {% else %}
+            Студент неизвестен. Лабораторная работа {{ lab_number }}
+        {% endif %}
+        </title>
     <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 </head>
 <body>
     <header>
-        WEB-программирование, часть 2. Лабораторная работа {{lab_number}}
+        WEB-программирование, часть 2. {% if lab_num %}Лабораторная работа 2{% endif %}
     </header>
 
     <main>
@@ -20,7 +26,25 @@
     </main>
 
     <footer>
-        &copy; {{name}}, {{group}}, {{course}} курс, 2024
+        &copy; 
+        {% if name %}
+            {{ name }},
+        {% else %}
+            Анонимус,
+        {% endif %}
+
+        {% if group %}
+            {{ group }},
+        {% else %}
+            Группа неизвестна
+        {% endif %}
+
+        {% if course %}
+            {{ course }},
+        {% else %}
+            Курс неизвестен
+        {% endif %}
+        2024
     </footer>
 </body>
 </html>
