--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         WEB-программирование, часть 2. {{ self.lab() }}
-        <a href="{{ url_for('home') }}">Главное меню</a>
+        <a href="{{ url_for('menu') }}">Главное меню</a>
     </header>
 
     <main>
