--- a/static/main.css
+++ b/static/main.css
@@ -27,3 +27,9 @@ header {
     font-family: Arial;
     margin: 0px;
 }
+
+.error {
+    color: red;
+    font-weight: bold;
+    margin-left: 5px;
+}
