--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,30 @@
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="icon" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png') }}">
     <link rel="icon" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png') }}">
+    <style>
+        body {
+            {% if request.cookies.get('color') %}
+                color: {{ request.cookies.get('color') }};
+            {% endif %}
+
+            {% if request.cookies.get('bg_color') %}
+                background-color: {{ request.cookies.get('bg_color') }};
+            {% endif %}
+
+            {% if request.cookies.get('font_size') %}
+                font-size: {{ request.cookies.get('font_size') }}px;
+            {% endif %}
+
+            {% if request.cookies.get('font_style') == 'italic' %}
+            font-style: italic;
+            {% elif request.cookies.get('font_style') == 'bold' %}
+                font-weight: bold;
+            {% else %}
+                font-style: normal;
+                font-weight: normal;
+            {% endif %}
+        }
+    </style>
 </head>
 <body>
     <header>
