Рефакторинг: static, templates

--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -12,5 +12,7 @@
         <li><a href="/lab3/cookie">Куки</a></li>
         <li><a href="/lab3/del_cookie">Очистка куки</a></li>
         <li><a href="/lab3/form1">Формы</a></li>
+        <li><a href="/lab3/order">Выбор напитка</a></li>
+        <li><a href="/lab3/settings">Настройки отображения</a></li>
     </ol>
 {% endblock %}
