--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -6,6 +6,7 @@
     <h1>Формы, cookie</h1>
     <div>
         Привет, <span style="color: {{name_color}}">{{ name }}</span>!
+        Ваш возраст: <span style='color: {{name_color}}'>{{age}}</span>
     </div>
     <div>Список сделанных страниц:</div>
     <ol>
@@ -14,5 +15,6 @@
         <li><a href="/lab3/form1">Формы</a></li>
         <li><a href="/lab3/order">Выбор напитка</a></li>
         <li><a href="/lab3/settings">Настройки отображения</a></li>
+        <li><a href="/lab3/form1">Пользователь</a></li>
     </ol>
 {% endblock %}
