--- a/templates/lab3/settings.html
+++ b/templates/lab3/settings.html
@@ -29,5 +29,8 @@
         <div>
             <button type="submit">OK</button>
         </div>
+        <div>
+            <a href="/lab3/clear_cookies">Очистка</a>
+        </div>
     </form>
 {% endblock %}
