--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -7,5 +7,9 @@
     <div>Тема лабораторной - Формы (POST). Список сделанных страниц:</div>
     <ol>
         <li><a href="/lab4/div-form">Деление</a></li>
+        <li><a href="/lab4/sum-form">Сложение</a></li>
+        <li><a href="/lab4/mult-form">Умножение</a></li>
+        <li><a href="/lab4/diff-form">Вычитание</a></li>
+        <li><a href="/lab4/exp-form">Возведение в степень</a></li>
     </ol>
 {% endblock %}
