--- a/templates/lab4/login.html
+++ b/templates/lab4/login.html
@@ -9,6 +9,9 @@
         <form action="/lab4/logout" method="post">
             <button>Выход</button>
         </form>
+        <div>
+            <a href="/lab4/users">Перейти к списку пользователей</a>
+        </div>
     </div>
     {% else %}
         <h1>Вход</h1>
