--- a/templates/lab3/lab3.html
+++ b/templates/lab3/lab3.html
@@ -5,7 +5,7 @@
 {% block main %}
     <h1>Формы, cookie</h1>
     <div>
-        Привет, <span style="color: {{name_color}}">{{ name }}</span>!
+        Привет, <span style='color: {{name_color}}'>{{ name }}</span>!
         Ваш возраст: <span style='color: {{name_color}}'>{{age}}</span>
     </div>
     <div>Список сделанных страниц:</div>
@@ -16,5 +16,6 @@
         <li><a href="/lab3/order">Выбор напитка</a></li>
         <li><a href="/lab3/settings">Настройки отображения</a></li>
         <li><a href="/lab3/form1">Пользователь</a></li>
+        <li><a href="/lab3/train_ticket">Железнодорожный переезд</a></li>
     </ol>
 {% endblock %}
