--- a/templates/lab4/lab4.html
+++ b/templates/lab4/lab4.html
@@ -15,5 +15,6 @@
         <li><a href="/lab4/login">Авторизация</a></li>
         <li><a href="/lab4/fridge">Холодильник</a></li>
         <li><a href="/lab4/seed">Заказ зерна</a></li>
+        <li><a href="/lab4/register">Авторизированные полизователи</a></li>
     </ol>
 {% endblock %}
