--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -9,8 +9,7 @@
         <a href="/lab5/register"><button>Регистрация</button></a>
         <a href="/lab5/list"><button>Cписок статей</button></a>
         <a href="/lab5/create"><button>Cоздать статью</button></a>
+        <div><i>{{ login if login else 'Anonymous' }}</i></div>
     </div>
-
-<p style="text-align: right; margin:30px;">anonymous</p>
 <link rel="stylesheet" href="{{url_for('static', filename='lab1/main.css')}}">
 {% endblock %}
