--- a/templates/lab5/articles.html
+++ b/templates/lab5/articles.html
@@ -6,9 +6,21 @@
 
     <h1>Статьи</h1>
 
-    {% for article in articles %}
-        <h2>{{ article['title'] }}</h2>
-        <blockquote>{{ article['article_text'] }}</blockquote>
-    {% endfor %}
-
+    {% if articles %}
+        {% for article in articles %}
+            <h2>{{ article.title }}</h2>
+            <blockquote>{{ article.article_text }}</blockquote>
+            
+            {% if article.is_favourate %}(Избранная){% endif %}
+            {% if article.is_public %}(Публичная){% endif %}
+            <p></p>
+            <form action="{{ url_for('lab5.delete', article_id=article.id) }}" method="post">
+                <button type="submit">Удалить</button>
+            </form>
+            <p></p>
+            <a href="{{ url_for('lab5.edit', article_id=article.id) }}">Редактировать</a>
+        {% endfor %}
+    {% else %}
+        <p>{{ message }}</p>
+    {% endif %}
 {% endblock %}
