--- a/templates/lab5/lab5.html
+++ b/templates/lab5/lab5.html
@@ -9,6 +9,7 @@
         <a href="/lab5/register"><button>Регистрация</button></a>
         <a href="/lab5/list"><button>Cписок статей</button></a>
         <a href="/lab5/create"><button>Cоздать статью</button></a>
+        <a href="/lab5/logout"><button>Выход</button></a>
         <div><i>{{ login if login else 'Anonymous' }}</i></div>
     </div>
 <link rel="stylesheet" href="{{url_for('static', filename='lab1/main.css')}}">
