--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -4,93 +4,129 @@
 
 {% block script %}
 <script>
-    function getOfficeList() {
-        const url = '/lab6/json-rpc-api/';
-        const json = {
-            'jsonrpc': '2.0',
-            'method': 'info',
-            'id': Math.round(Math.random()*1000)
-        };
-    
-        fetch (url, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify(json)
-        })
-    
-        .then(function(response) {
-            return response.json()
-        })
-    
-        .then (function(data) {
-            const office_list = data.result;
-            const ul = document.getElementById('office-list');
-            for (let i=0; i< office_list.length; i++) {
-                const office = office_list[i];
-                const li = document.createElement('li');
-                li.innerText = `${office.number}: ${office.tenant || 'свободен'}`;
-    
-                const bookingButton = document.createElement('button');
-                bookingButton.innerText = 'Зарезервирвировать'
-                bookingButton.onclick = function() {booking(office.number)};
-                li.appendChild(bookingButton);
-    
-                ul.appendChild(li);
-            }
-        })
-    }  
-    
-    function booking(officeNumber) {
-        const url = '/lab6/json-rpc-api/';
-        const json = {
-            'jsonrpc': '2.0',
-            'params': officeNumber,
-            'method': 'booking',
-            'id': Math.round(Math.random()*1000)
-        };
-    
-        fetch( url, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify(json)
-        })
-    
-        .then(function(response) {
-            return response.json()
-        })
-    
-        .then(function(data) {
-            if(data.error) {
-                switch (data.error.code==1) {
-                    case 1:
-                        alert('Вы не авторизированы, пожалуйста, авторизируйтесь');
-                        break;
-                    case 2:
-                        alert('Офис уже арендуется');
-                        break;
-                    case -32601:
-                        alert('Странная ошибка');
-                        break;
-                }
-    
-            }
-            else {
-                document.getElementById('office-list').innerHTML='';
-                getOfficeList()
-            }
-    
-        })
-    }
-    
-    
-    document.addEventListener('DOMContentLoaded', function(){
-        getOfficeList();
+function getOfficeList() {
+    const url = '/lab6/json-rpc-api/';
+    const json = {
+        'jsonrpc': '2.0',
+        'method': 'info',
+        'id': Math.round(Math.random()*1000)
+    };
+    fetch(url, {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(json)
     })
-    
-    </script>
+    .then(function(response) {
+        return response.json()
+    })
+    .then(function(data) {
+        const office_list = data.result;
+        const ul = document.getElementById('office-list');
+        for(let i = 0; i < office_list.length; i++) {
+            const office = office_list[i];
+            const li = document.createElement('li');
+            li.innerText = `${office.number}: ${office.tenant || 'свободен'}`;
+
+            if (!office.tenant) {
+                const bookingButton = document.createElement('button');
+                bookingButton.innerText = 'Зарезервировать';
+                bookingButton.onclick = function() { booking(office.number); };
+                li.appendChild(bookingButton);
+            } else {
+                const cancelButton = document.createElement('button');
+                cancelButton.innerText = 'Освободить';
+                cancelButton.onclick = function() { cancelBooking(office.number); };
+                li.appendChild(cancelButton);
+            }
+
+            ul.appendChild(li);
+        }
+    });
+}
+
+function booking(officeNumber) {
+    const url = '/lab6/json-rpc-api/';
+    const json = {
+        'jsonrpc': '2.0',
+        'method': 'booking',
+        'params': officeNumber,
+        'id': Math.round(Math.random()*1000)
+    };
+    fetch(url, {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify(json)
+    })
+    .then(function(response) {
+        return response.json()
+    })
+    .then(function(data) {
+        if(data.error) {
+            switch(data.error.code) {
+                case 1:
+                    alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                    break;
+                case 2:
+                    alert('Офис уже арендуется');
+                    break;
+                case -32601:
+                    alert('Странная ошибка!');
+                    break;
+            }
+        }
+        else {
+            document.getElementById('office-list').innerHTML = '';
+            getOfficeList();
+        }
+    });
+}
+
+function cancelBooking(officeNumber) {
+    const url = '/lab6/json-rpc-api/';
+    const json = {
+        'jsonrpc': '2.0',
+        'method': 'cancellation',
+        'params': officeNumber,
+        'id': Math.round(Math.random() * 1000)
+    };
+    fetch(url, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(json)
+    })
+    .then(function(response) {
+        return response.json()
+    })
+    .then(function(data) {
+        if (data.error) {
+            switch (data.error.code) {
+                case 1:
+                    alert('Вы не авторизованы, пожалуйста, авторизуйтесь');
+                    break;
+                case 3:
+                    alert('Офис не арендован');
+                    break;
+                case 4:
+                    alert('Вы не можете освободить офис, арендованный другим пользователем');
+                    break;
+                case -32601:
+                    alert('Странная ошибка!');
+                    break;
+            }
+        } else {
+            document.getElementById('office-list').innerHTML = '';
+            getOfficeList();
+        }
+    });
+}
+
+document.addEventListener('DOMContentLoaded', function() {
+    getOfficeList();
+});
+</script>
 {% endblock %}
 
 {% block main %}
     <h1>Список кабинетов</h1>
-    <ul id="offices-list"></ul>
+    <ul id="office-list"></ul>
 {% endblock %}
