--- a/templates/lab6/lab6.html
+++ b/templates/lab6/lab6.html
@@ -20,12 +20,14 @@ function getOfficeList() {
         return response.json()
     })
     .then(function(data) {
-        const office_list = data.result;
+        const result = data.result;
+        const offices = result.offices;
+        const totalCost = result.total_cost;
         const ul = document.getElementById('office-list');
-        for(let i = 0; i < office_list.length; i++) {
-            const office = office_list[i];
+        for (let i = 0; i < offices.length; i++) {
+            const office = offices[i];
             const li = document.createElement('li');
-            li.innerText = `${office.number}: ${office.tenant || 'свободен'}`;
+            li.innerText = `Офис ${office.number}: ${office.tenant || 'свободен'}, стоимость аренды: ${office.price} руб.`;
 
             if (!office.tenant) {
                 const bookingButton = document.createElement('button');
@@ -41,6 +43,8 @@ function getOfficeList() {
 
             ul.appendChild(li);
         }
+        const totalCostDiv = document.getElementById('total-cost');
+        totalCostDiv.innerText = `Общая стоимость аренды: ${totalCost} руб.`;
     });
 }
 
@@ -120,8 +124,33 @@ function cancelBooking(officeNumber) {
     });
 }
 
+function getTotalPrice() {
+    const url = '/lab6/json-rpc-api/';
+    const json = {
+        'jsonrpc': '2.0',
+        'method': 'get_total_price',
+        'id': Math.round(Math.random() * 1000)
+    };
+    fetch(url, {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(json)
+    })
+    .then(function(response) {
+        return response.json();
+    })
+    .then(function(data) {
+        if (!data.error) {
+            document.getElementById('total-price').innerText = `Общая стоимость аренды: ${data.result} руб.`;
+        } else {
+            console.error('Ошибка при получении общей стоимости аренды:', data.error.message);
+        }
+    });
+}
+
 document.addEventListener('DOMContentLoaded', function() {
     getOfficeList();
+    getTotalPrice();
 });
 </script>
 {% endblock %}
@@ -129,4 +158,5 @@ document.addEventListener('DOMContentLoaded', function() {
 {% block main %}
     <h1>Список кабинетов</h1>
     <ul id="office-list"></ul>
+    <p id="total-price">Общая стоимость аренды: 0 руб.</p>
 {% endblock %}
