--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,6 +32,8 @@
             {% endif %}
         }
     </style>
+    {% block style %}{% endblock %} 
+    {% block script %}{% endblock %}
 </head>
 <body>
     <header>
