--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -4,6 +4,46 @@
 
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}"></script>
+<style>
+.modal {
+    display: none;
+    z-index: 100;
+    box-shadow: 3px 3px 5px black;
+    background: white;
+    width: 400px;
+    left: 50%;
+    top: 220px;
+    margin-left: -200px;
+    position: absolute;
+    padding: 20px;
+    font-weight: bold;
+}
+
+.modal input, .modal textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #5B3A29;
+    border-radius: 4px;
+    margin-bottom: 10px; 
+}
+
+.modal label {
+    margin-right: 15px;
+    display: block;      
+}
+
+.modal button {
+    padding: 8px 16px;
+    background-color: #5B3A29;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.modal button:hover {
+    background-color: tan;
+}
+</style>
 {% endblock %}
 
 {% block main %}
@@ -27,5 +67,32 @@
     <div>
         <button onclick="addFilm()">Добавить фильм</button>
     </div>
+    
+    <div class="modal">
+        <input type="hidden" id="id">
+        <label>
+            Название фильма на русском:
+            <input type="text" id="title_ru">
+        </label><br>
 
+        <label>
+            Название фильма на оригинальном языке
+            <i>(если фильм русский, оставьте поле пустым):</i>
+            <input type="text" id="title">
+        </label><br>
+
+        <label>
+            Год выпуска:
+            <input type="number" id="year">
+        </label><br>
+
+        <label>
+            Описание:
+            <textarea id="description"></textarea>
+        </label><br>
+
+        <button onclick="sendFilm()">ОК</button>
+        <button onclick="cancel()">Отмена</button>
+
+    </div>
 {% endblock %}
