--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -43,6 +43,10 @@
 .modal button:hover {
     background-color: tan;
 }
+
+.error-message {
+    color: red
+}
 </style>
 {% endblock %}
 
@@ -89,6 +93,7 @@
         <label>
             Описание:
             <textarea id="description"></textarea>
+            <div id="description-error" class="error-message"></div>
         </label><br>
 
         <button onclick="sendFilm()">ОК</button>
