--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -5,6 +5,30 @@
 {% block script %}
 <script src="{{url_for('static', filename='lab7/main.js')}}"></script>
 <style>
+th, td { 
+    border: 1px solid #5B3A29;
+    padding: 8px; 
+    text-align: center; 
+}
+
+th { 
+    background-color: #5B3A29; 
+} 
+
+button { 
+    padding: 10px 20px; 
+    background-color: #5B3A29; 
+    color: white; 
+    border: none; 
+    border-radius: 4px;
+    cursor: pointer; 
+    margin-left: 10px;
+}
+
+button:hover { 
+    background-color:  tan; 
+}
+
 .modal {
     display: none;
     z-index: 100;
