--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -11,6 +11,10 @@ th, td {
     text-align: center; 
 }
 
+table {
+    width: 50%;
+}
+
 th { 
     background-color: #5B3A29; 
 } 
@@ -101,17 +105,20 @@ button:hover {
         <label>
             Название фильма на русском:
             <input type="text" id="title_ru">
+            <div id="title_ru-error" class="error-message"></div>
         </label><br>
 
         <label>
             Название фильма на оригинальном языке
             <i>(если фильм русский, оставьте поле пустым):</i>
             <input type="text" id="title">
+            <div id="title-error" class = "error-message"></div>
         </label><br>
 
         <label>
             Год выпуска:
             <input type="number" id="year">
+            <div id="year-error" class = "error-message"></div>
         </label><br>
 
         <label>
