--- a/templates/lab8/login.html
+++ b/templates/lab8/login.html
@@ -3,27 +3,20 @@
 {% block lab %}Лабораторная работа 8{% endblock %}
 
 {% block main %}
-
     <h1>Вход в систему</h1>
-
     <form action="/lab8/login" method="post">
         <div>
-            <label>
-                Логин: <input type="text" name="login">
-            </label>
+            <label>Логин: <input type="text" name="login"></label>
         </div>
-
         <div>
-            <label>
-                Пароль: <input type="password" name="password">
-            </label>
+            <label>Пароль: <input type="password" name="password"></label>
         </div>
-
+        <div>
+            <label>Запомнить меня: <input type="checkbox" name="remember"></label>
+        </div>
+        <button type="submit">Войти</button>
         {% if error %}
             <div style="color: red;">{{ error }}</div>
         {% endif %}
-
-        <button type="submit">Вход</button>
     </form>
-
 {% endblock %}
