--- a/templates/lab8/create.html
+++ b/templates/lab8/create.html
@@ -11,6 +11,9 @@
         <div>
             <label>Статья: <textarea name="article_text"></textarea></label>
         </div>
+        <div>
+            <label>Публичная статья: <input type="checkbox" name="is_public"></label>
+        </div>
         <button type="submit">Создать</button>
     </form>
 {% endblock %}
