--- a/templates/base.html
+++ b/templates/base.html
@@ -48,5 +48,17 @@
     <footer>
         &copy; Алина Мицевич, ФБИ-24, 3 курс, 2024
     </footer>
+
+    <!-- Снежинки -->
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
+    <div class="snowflake"></div>
 </body>
 </html>
